--- a/doc/analytic_part.tex
+++ b/doc/analytic_part.tex
@@ -34,24 +34,23 @@
 где $d$ -- расстояние до источника освещения, $K$ -- произвольная константа.
 
 \section{Алгоритмы удаления невидимых линий и поверхностей}
-Все алгоритмы удаления невидимых линий работают либо в пространстве объектов, либо в пространстве изображений. Рассмотрим наиболее известные из них~\cite{lit1}.
+Все алгоритмы удаления невидимых линий работают либо в пространстве объектов, либо в пространстве изображений. Рассмотрим наиболее известные из них.
 \subsection{Алгоритм Робертса}
-Этот алгоритм работает в объектном пространстве и использует проекции объектов на картинную плоскость для анализа видимости. Алгоритм прежде всего удаляет из каждого тела те ребра или грани, которые экранируются самим телом. Затем каждое из видимых ребер каждого тела сравнивается с каждым из оставшихся тел для определения того, какая его часть или части, если таковые есть, экранируются этими телами. Поэтому вычислительная трудоемкость алгоритма Робертса растет теоретически как квадрат числа объектов~\cite{lit1}.
+Этот алгоритм работает в объектном пространстве и использует проекции объектов на картинную плоскость для анализа видимости. Алгоритм прежде всего удаляет из каждого тела те ребра или грани, которые экранируются самим телом. Затем каждое из видимых ребер каждого тела сравнивается с каждым из оставшихся тел для определения того, какая его часть или части, если таковые есть, экранируются этими телами. Поэтому вычислительная трудоемкость алгоритма Робертса растет теоретически как квадрат числа объектов~\cite{lit1,lit2}.
 
-\subsection{Алгоритм Варнока}
-Алгоритм Варнока основывается на рекурсивном разбиении окна на подокна всякий раз, когда оно не пусто, до окна размеров в 1 пиксель, после чего определяется ближайший к наблюдателю объект, пиксель закрашивается цветом этого объекта. Рекурсивность алгоритма является главным недостатком алгоритма: окно каждый раз делится на 4 подокна, если размер окна больше одного пикселя, или оно содержит несколько объектов, или пересекается с объектом.
+\subsection{Алгоритм Варнака}
+Алгоритм Варнака, работающий в пространстве изображений, реализует рекурсивное разбиение исходного окна на подокна для определения видимых объектов сцены. Если текущее окно содержит более одного объекта или пересекается с объектом, оно делится на четыре равные части. Процесс повторяется до тех пор, пока размер подокна не станет равен одному пикселю или оно не окажется полностью пустым. По завершении разбиения цвет пикселя определяется ближайшим видимым объектом. Основной недостаток алгоритма — высокая вычислительная сложность из-за рекурсивного характера, особенно при работе с деталями в высоком разрешении~\cite{lit3}.
 
 \subsection{Алгоритм, использующий z-буфер}
 
 Алгоритм основывается на хранении глубины (z-значения) каждого пикселя экрана и определении ближайшей к экрану точки при разложении многоугольников в растр.
 Главное преимущество алгоритма -- его простота. Кроме того, этот алгоритм решает задачу об удалении невидимых поверхностей и делает тривиальной визуализацию пересечений сложных поверхностей -- сцены могут быть любой сложности.
-Основной недостаток алгоритма -- большой объем требуемой памяти \cite{lit1}.
+Основной недостаток алгоритма -- большой объем требуемой памяти~\cite{lit1}.
 
 
 \subsection{Алгоритм обратной трассировки лучей}
-Метод прямой и обратной трассировки лучей заключается в том, что от момента испускания лучей источником света до момента попадания в камеру, траектории лучей отслеживаются, и рассчитываются пересечения лучей с лежащими на траектории объектами. При этом луч может быть поглощен, диффузно и/или зеркально отражен или, в случае прозрачности некоторых объектов, преломлен \cite{lit4}.
+Алгоритм трассировки лучей моделирует процесс формирования изображения путём симуляции распространения световых лучей в сцене. При прямой трассировке отслеживаются лучи, исходящие от источника света, что неэффективно, поскольку далеко не все лучи попадут в камеру, а значит, повлияют на изображение. По этой причине используется алгоритм обратной трассировки лучей. При обратной трассировке выполняется построение изображения, следя за траекторией лучей, исходящих из камеры. Лучи проверяют пересечения с объектами сцены, и, если такое пересечение обнаружено, рассчитывается цветовая характеристика точки с учётом материалов объекта, освещения, отражений и преломлений. Для моделирования этих эффектов алгоритм порождает вторичные лучи, что позволяет создавать реалистичные изображения. Основным недостатком метода является его высокая вычислительная сложность~\cite{lit2, lit3}.
 
-\clearpage
 \section{Методы закраски}
 \subsection{Простая закраска}
 Если предположить, что источник света находится на бесконечности, то лучи света, падающие на поверхность, параллельны между собой. Если к этому добавить условие, что наблюдатель находится в бесконечно удаленной точке, то эффектом ослабления света с увеличением расстояния от источника также можно пренебречь. При таких вводных плоская грань во всех ее точках имеет одинаковую интенсивность освещения, поэтому она закрашивается одним цветом.
@@ -83,9 +82,14 @@
 
 Стоит отметить, что в случае алгоритма обратной трассировки лучей задача построения теней сводится к тому, чтобы при нахождении точки пересечения луча с объектом сцены провести еще один луч от этой точки к источнику света. Если на пути луча встречается преграда в виде поверхности какого-либо объекта сцены, точка находится в тени.
 
+\section{Алгоритм симуляции эффекта глубины поля}
+Алгоритм симуляции эффекта глубины поля, то есть алгоритм, позволяющий изображать объекты, расположенные ближе к фокальной плоскости более четкими, чем те, что расположены дальше от нее, является модификацией алгоритма трассировки лучей. Работа алгоритма заключается в том, чтобы применять случайное отклонение начала луча трассировки от положения камеры в пространстве в рамках круга заданного радиуса, называемого апертурой. Круг при этом лежит в плоскости, параллельной картинной плоскости.
+
+В рамках данного алгоритма также вводится понятие фокальной точки, задающейся фиксированным расстоянием от камеры по вектору направления взгляда для каждого пикселя кадра. Таким образом, модифицированный трассируемый луч, начало которого задается с помощью случайной точки круга заданного радиуса, направляется к фокальной точке.
+
 
 \subsection*{Вывод}
 
-В данном разделе были рассмотрены основные методы построения реалистичных изображений. Для удаления невидимых ребер, учета отражения света и теней в данной работе был выбран алгоритм обратной трассировки лучей в силу своей универсальности и реалистичности результата.
+В данном разделе были рассмотрены основные методы построения реалистичных изображений. Для удаления невидимых ребер, учета отражения света и теней, а также симуляции эффекта глубины поля в данной работе был выбран алгоритм обратной трассировки лучей в силу своей универсальности и реалистичности результата.
 
 \clearpage
