--- a/doc/conclusion.tex
+++ b/doc/conclusion.tex
@@ -1,3 +1,12 @@
 \ssr{ЗАКЛЮЧЕНИЕ}
 
- 
+В результате выполнения курсового проекта была достигнута его цель: было разработано программное обеспечение для визуализации сцен трехмерных объектов с изменяемыми параметрами. 
+
+В ходе работы были решены все поставленные задачи:
+\begin{itemize}
+	\item рассмотрены основные алгоритмы удаления невидимых линий и поверхностей, методы закраски, методы построения теней. На основании их анализа были выбраны алгоритмы и методы, наиболее подходящие для решения поставленной задачи;
+	\item была проведена декомпозиция задачи, разработаны диаграммы функционального моделирования и схемы реализуемых алгоритмов;
+	\item спроектированное ПО было реализовано выбранными средствами;
+	\item было проведено исследование временной эффективности реализованного ПО.
+\end{itemize}
+
