--- a/doc/coursework.tex
+++ b/doc/coursework.tex
@@ -18,4 +18,5 @@
 	
 	\def\bibname{\begin{center}\Large СПИСОК ИСПОЛЬЗОВАННЫХ ИСТОЧНИКОВ\end{center}}
 	\include{links}
+	\include{appendixA}
 \end{document}
