--- a/doc/design_part.tex
+++ b/doc/design_part.tex
@@ -8,7 +8,7 @@
 	\item возможность выбора объекта сцены путем нажатия на него мышкой или его выбора в списке объектов;
 	\item возможность изменения цвета и коэффициента отражения выбранного объекта сцены;
 	\item возможность выбора типа закраски объекта: по методу Гуро и по методу Фонга;
-	\item возможность включения режима глубины поля, при этом возможно изменение расстояния от камеры до фокальной плоскости;
+	\item возможность включения режима глубины поля, при этом возможно изменение расстояния от камеры до фокальной точки;
 	\item возможность включения режима сглаживания изображения.
 \end{itemize}
 
@@ -18,12 +18,6 @@
 	\item модели шара и куба представляются в программе аналитически;
 	\item программа должна корректно обрабатывать ввод некорректных данных.
 \end{itemize}
-
-%К разработанному ПО применяются следующие допущения:
-%\begin{itemize}
-%	\item точечный источник света имеет фиксированное положение и присутствует на каждой сцене в одном экземпляре;
-%	\item 
-%\end{itemize}
 
 \section{Формализация объектов синтезируемой сцены}
 Синтезируемые сцены состоят из следующих типов объектов:
@@ -152,7 +146,7 @@
 	\label{fig:ChessIntersection}
 \end{figure}
 
-\section{Вывод}
+\section*{Вывод}
 В данном разделе были формализованы требования к реализуемому ПО, объекты сцены и их структура, приведена декомпозиция задачи, а также рассмотрены схемы алгоритмов визуализации сцены объектов методом трассировки лучей.
 
 \clearpage
