--- a/doc/intro.tex
+++ b/doc/intro.tex
@@ -2,14 +2,14 @@
 
 Задача построения реалистичных трехмерных сцен, учитывающих оптические свойства поверхностей и источников света, является центральной в компьютерной графике. В настоящей работе рассматриваются методы решения данной задачи.
 
-Цель работы -- разработка программного обеспечения (ПО) для создания реалистичного изображения сцен трехмерных объектов.
+Цель работы -- разработка программного обеспечения (ПО) для визуализации сцен трехмерных объектов, позволяющего изменять параметры объектов.
 
 Для достижения поставленной цели необходимо решить следующие задачи:
 \begin{enumerate}
-	\item Проанализировать предметную область, рассмотреть известные подходы и алгоритмы;
-	\item Спроектировать ПО для построения реалистичных сцен;
-	\item Реализовать выбранные алгоритмы для построения трехмерной сцены;
-	\item Исследовать характеристики разработанного ПО.
+	\item проанализировать предметную область, рассмотреть известные подходы и алгоритмы;
+	\item спроектировать ПО для построения реалистичных сцен;
+	\item реализовать выбранные алгоритмы для построения трехмерной сцены;
+	\item исследовать характеристики разработанного ПО.
 \end{enumerate}
 
 \clearpage
