--- a/doc/tech_part.tex
+++ b/doc/tech_part.tex
@@ -322,7 +322,7 @@
 	\label{fig:ChoosingObjectDemo}
 \end{figure}
 
-\section{Вывод}
+\section*{Вывод}
 В данном разделе были выбраны средства реализации, описана структура классов программы, а также приведено описание интерфейса ПО.
 
 \clearpage
