--- a/doc/analytic_part.tex
+++ b/doc/analytic_part.tex
@@ -85,7 +85,7 @@
 \section{Алгоритм симуляции эффекта глубины поля}
 Алгоритм симуляции эффекта глубины поля, то есть алгоритм, позволяющий изображать объекты, расположенные ближе к фокальной плоскости более четкими, чем те, что расположены дальше от нее, является модификацией алгоритма трассировки лучей. Работа алгоритма заключается в том, чтобы применять случайное отклонение начала луча трассировки от положения камеры в пространстве в рамках круга заданного радиуса, называемого апертурой. Круг при этом лежит в плоскости, параллельной картинной плоскости.
 
-В рамках данного алгоритма также вводится понятие фокальной точки, задающейся фиксированным расстоянием от камеры по вектору направления взгляда для каждого пикселя кадра. Таким образом, модифицированный трассируемый луч, начало которого задается с помощью случайной точки круга заданного радиуса, направляется к фокальной точке.
+В рамках данного алгоритма также вводится понятие фокальной точки, задающейся фиксированным расстоянием от камеры по вектору направления взгляда для каждого пикселя кадра. Таким образом, модифицированный трассируемый луч, начало которого задается с помощью случайной точки круга заданного радиуса, направляется к фокальной точке~\cite{DOF}.
 
 
 \subsection*{Вывод}
