--- a/doc/coursework.tex
+++ b/doc/coursework.tex
@@ -2,11 +2,9 @@
 
 \begin{document}
 	%\include{title}
-	
 	\includepdf{Title_cg}
 	\setcounter{page}{4}
-	
-	\def\contentsname{\begin{center}СОДЕРЖАНИЕ\end{center}}
+	\def\contentsname{\vspace*{-3cm}\begin{center}СОДЕРЖАНИЕ\end{center}}
 	\tableofcontents
 	
 	\include{intro}
