--- a/doc/design_part.tex
+++ b/doc/design_part.tex
@@ -31,7 +31,7 @@
 
 
 \section{Декомпозиция задачи}
-В результате декомпозиции задачи были получены подзадачи, показанные на рисунке~\ref{fig:IDEF0_top}~-~\ref{fig:IDEF0_2}.
+В результате декомпозиции задачи были получены подзадачи, показанные на рисунках~\ref{fig:IDEF0_top}~-~\ref{fig:IDEF0_2}.
 
 \begin{figure}[H]
 	\centering
@@ -58,6 +58,7 @@
 
 
 \section{Алгоритм трассировки лучей}
+На рисунке~\ref{fig:RayTracing} приведена схема алгоритма трассировки лучей.
 \begin{figure}[H]
 	\centering
 	\includegraphics[height=0.9\textheight]{RayTracing}
