--- a/doc/links.tex
+++ b/doc/links.tex
@@ -6,9 +6,10 @@
 	\bibitem{lit5} Закрашивание. Рендеринг полигональных моделей [Электронный ресурс]. URL: \url{https://intuit.ru/studies/professional\_skill\_improvements/1283/courses/70/lecture/21/08?page=2} (дата обращения 06.10.24);
 	\bibitem{lit6} Построение теней [Электронный ресурс]. URL: \url{https://stratum.ac.ru/education/textbooks/kgrafic/additional/addit28.html} (дата обращения 06.10.24);
 	\bibitem{lit7} Glassner, Andrew. An Introduction to Ray Tracing. --- New York: Academic Press, 1991. --- 359p.;
-	\bibitem{lit8} Fast Minimum Storage Ray/Triangle Intersection [Электронный ресурс]. URL: \url{https://web.archive.org/web/20170517125238/http://www.cs.virginia.edu/~gfx/Courses/2003/ImageSynthesis/papers/Acceleration/Fast\%20MinimumStorage\%20RayTriangle\%20Intersection.pdf};
-	\bibitem{CSharp} Заметки о выпуске C\# 7.3 [Электронный ресурс]. URL: \url{https://docs.microsoft.com/en-us/visualstudio/releasenotes/vs2017-relnotes-v15.7#csharp} (дата обращения 4.12.2024);
-	\bibitem{VS2022} Microsoft Visual Studio 2022 [Электронный ресурс]. URL: \url{https://visualstudio.microsoft.com/ru/vs/};
+	\bibitem{DOF} Depth Of Field. The University of Washington [Электронный ресурс]. URL: \url{https://courses.cs.washington.edu/courses/csep557/99au/projects/trace/depthoffield.doc} (дата обращения 06.12.24);
+	\bibitem{lit8} Fast Minimum Storage Ray/Triangle Intersection [Электронный ресурс]. URL: \url{https://web.archive.org/web/20170517125238/http://www.cs.virginia.edu/~gfx/Courses/2003/ImageSynthesis/papers/Acceleration/Fast\%20MinimumStorage\%20RayTriangle\%20Intersection.pdf} (дата обращения 04.12.2024);
+	\bibitem{CSharp} Заметки о выпуске C\# 7.3 [Электронный ресурс]. URL: \url{https://docs.microsoft.com/en-us/visualstudio/releasenotes/vs2017-relnotes-v15.7#csharp} (дата обращения 04.12.2024);
+	\bibitem{VS2022} Microsoft Visual Studio 2022 [Электронный ресурс]. URL: \url{https://visualstudio.microsoft.com/ru/vs/} (дата обращения 04.12.2024);
 	\bibitem{Anti-aliasing} Сглаживание [Электронный ресурс]. URL: \url{https://www.nvidia.com/content/Control-Panel-Help/vLatest/ru-ru/mergedProjects/nv3dRUS/antialiasing.htm} (дата обращения 04.12.2024);
 	\bibitem{proc} Технические характеристики процессора Intel Core i7-12700KF [Электронный ресурс]. URL: \url{https://www.intel.com/content/www/us/en/products/sku/134595/intel-core-i712700kf-processor-25m-cache-up-to-5-00-ghz/specifications.html} (дата обращения 04.12.2024);
 	\bibitem{win11} Windows 11 Home [Электронный ресурс]. URL: \url{https://www.microsoft.com/ru-ru/software-download/windows11} (дата обращения 04.12.2024);
